Correct version for Tony

--- a/Exploration.ipynb
+++ b/Exploration.ipynb
@@ -629,16 +629,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. We will try a XGBoost version (does not need to fill NaN values)\n",
-    "2. We will try other algorithms (need to fill NaN values)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,12 +703,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_full = train_df[:100].copy(deep=True)\n",
-    "X_full_test = test_df[:100].copy(deep=True)\n",
+    "X_full = train_df.copy(deep=True)\n",
+    "X_full_test = test_df.copy(deep=True)\n",
     "\n",
     "y_col = ['updates', 'personal', 'promotions', 'forums', 'purchases', 'travel', 'spam', 'social']\n",
     "y = X_full[y_col]\n",
@@ -725,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +869,7 @@
     "    (DateTransformer(active=True), date_cat),\n",
     "    (Bounded_label_lin, bounded_label_cat),\n",
     "    (BoundedOrdinalTransformer(images=10, urls=50), bounded_ordinal_cat),\n",
-    "    (OneHotEncoder(), label_cat),\n",
+    "    (Label_lin, label_cat),\n",
     "    (Countinuous_lin, continuous_cat),\n",
     "    # remainder='passthrough'\n",
     ")"
@@ -892,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,14 +1020,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 2970000 possibilites for the RandomizedSearchCV.\n"
+      "There are 101376 possibilites for the RandomizedSearchCV.\n"
      ]
     }
    ],
@@ -1043,16 +1035,17 @@
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "\n",
     "param_dist = {\n",
-    "    'columntransformer__pipeline-1__boundedlabeltransformer__org' : [1,20,40,50,60,100],\n",
-    "    'columntransformer__pipeline-1__boundedlabeltransformer__tld' : [1,10,20,30,50],\n",
-    "    'columntransformer__boundedordinaltransformer__images' : [1, 5, 10, 15, 20],\n",
-    "    'columntransformer__boundedordinaltransformer__urls' : [1, 30, 50, 70, 100],\n",
+    "    'columntransformer__pipeline-1__boundedlabeltransformer__org' : [1,20,40,50],\n",
+    "    'columntransformer__pipeline-1__boundedlabeltransformer__tld' : [1,10,20,30],\n",
+    "    'columntransformer__boundedordinaltransformer__images' : [1, 5, 10, 15],\n",
+    "    'columntransformer__boundedordinaltransformer__urls' : [1, 30, 50, 70,],\n",
     "    'onevsrestclassifier__estimator__bootstrap': [True, False],\n",
     "    'onevsrestclassifier__estimator__max_depth': [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, None],\n",
     "    'onevsrestclassifier__estimator__max_features': ['auto', 'sqrt'],\n",
     "    'onevsrestclassifier__estimator__min_samples_leaf': [1, 2, 4],\n",
     "    'onevsrestclassifier__estimator__min_samples_split': [2, 5, 10],\n",
-    "    'onevsrestclassifier__estimator__n_estimators': [200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000]\n",
+    "    #'onevsrestclassifier__estimator__n_estimators': [200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000]\n",
+    "    'onevsrestclassifier__estimator__n_estimators': [1]\n",
     "}\n",
     "\n",
     "number_possibilites = 1\n",
@@ -1064,14 +1057,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 2 folds for each of 1 candidates, totalling 2 fits\n"
+      "Fitting 2 folds for each of 4 candidates, totalling 8 fits\n"
      ]
     },
     {
@@ -1079,54 +1072,9 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   2 out of   2 | elapsed:   17.6s remaining:    0.0s\n",
-      "[Parallel(n_jobs=-1)]: Done   2 out of   2 | elapsed:   17.6s finished\n",
-      "C:\\Users\\amoni\\Miniconda3\\envs\\ia-tools\\lib\\site-packages\\sklearn\\multiclass.py:77: UserWarning: Label not 5 is present in all training examples.\n",
-      "  str(classes[c]))\n"
+      "[Parallel(n_jobs=-1)]: Done   2 out of   8 | elapsed:    3.5s remaining:   10.8s\n",
+      "[Parallel(n_jobs=-1)]: Done   8 out of   8 | elapsed:    4.0s finished\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "RandomizedSearchCV(cv=2,\n",
-       "                   estimator=Pipeline(steps=[('columntransformer',\n",
-       "                                              ColumnTransformer(transformers=[('datetransformer',\n",
-       "                                                                               DateTransformer(),\n",
-       "                                                                               ['date']),\n",
-       "                                                                              ('pipeline-1',\n",
-       "                                                                               Pipeline(steps=[('boundedlabeltransformer',\n",
-       "                                                                                                BoundedLabelTransformer()),\n",
-       "                                                                                               ('onehotencoder',\n",
-       "                                                                                                OneHotEncoder(handle_unknown='ignore'))]),\n",
-       "                                                                               ['org',\n",
-       "                                                                                'tld']),\n",
-       "                                                                              ('boundedordinaltransformer',\n",
-       "                                                                               BoundedOrdina...\n",
-       "                                        'onevsrestclassifier__estimator__max_features': ['auto',\n",
-       "                                                                                         'sqrt'],\n",
-       "                                        'onevsrestclassifier__estimator__min_samples_leaf': [1,\n",
-       "                                                                                             2,\n",
-       "                                                                                             4],\n",
-       "                                        'onevsrestclassifier__estimator__min_samples_split': [2,\n",
-       "                                                                                              5,\n",
-       "                                                                                              10],\n",
-       "                                        'onevsrestclassifier__estimator__n_estimators': [200,\n",
-       "                                                                                         400,\n",
-       "                                                                                         600,\n",
-       "                                                                                         800,\n",
-       "                                                                                         1000,\n",
-       "                                                                                         1200,\n",
-       "                                                                                         1400,\n",
-       "                                                                                         1600,\n",
-       "                                                                                         1800,\n",
-       "                                                                                         2000]},\n",
-       "                   random_state=1, return_train_score=True,\n",
-       "                   scoring='neg_log_loss', verbose=1)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1136,37 +1084,58 @@
     "    estimator=classifiers['rfc'],\n",
     "    param_distributions=param_dist,\n",
     "    scoring='neg_log_loss',\n",
-    "    n_iter=1,\n",
+    "    n_iter=4,\n",
     "    cv=2,\n",
     "    verbose=1,\n",
     "    random_state=1,\n",
     "    n_jobs=-1,\n",
     "    return_train_score=True)\n",
     "\n",
-    "random_search.fit(X_full, y)"
+    "random_search.fit(X_full, y);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exporting to JSON"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "parsed = json.loads(pd.DataFrame(random_search.cv_results_).to_json())\n",
+    "\n",
+    "with open('results.json', \"w\") as f:\n",
+    "        json.dump(parsed,f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'onevsrestclassifier__estimator__n_estimators': 1600,\n",
+       "{'onevsrestclassifier__estimator__n_estimators': 1,\n",
        " 'onevsrestclassifier__estimator__min_samples_split': 10,\n",
-       " 'onevsrestclassifier__estimator__min_samples_leaf': 2,\n",
+       " 'onevsrestclassifier__estimator__min_samples_leaf': 4,\n",
        " 'onevsrestclassifier__estimator__max_features': 'auto',\n",
-       " 'onevsrestclassifier__estimator__max_depth': 80,\n",
+       " 'onevsrestclassifier__estimator__max_depth': 30,\n",
        " 'onevsrestclassifier__estimator__bootstrap': True,\n",
-       " 'columntransformer__pipeline-1__boundedlabeltransformer__tld': 20,\n",
-       " 'columntransformer__pipeline-1__boundedlabeltransformer__org': 1,\n",
-       " 'columntransformer__boundedordinaltransformer__urls': 30,\n",
+       " 'columntransformer__pipeline-1__boundedlabeltransformer__tld': 10,\n",
+       " 'columntransformer__pipeline-1__boundedlabeltransformer__org': 50,\n",
+       " 'columntransformer__boundedordinaltransformer__urls': 1,\n",
        " 'columntransformer__boundedordinaltransformer__images': 1}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1189,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,6 +1167,13 @@
     "                        'spam', 'social'])\n",
     "pred_df.to_csv(\"submission_ml.csv\", index=True, index_label='Id')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
