--- a/kaggle_project.ipynb
+++ b/kaggle_project.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "all_data = pd.read_csv(\"train_ml.csv\", index_col=0)\n",
     "\n",
-    "all_data_final = pd.read_csv(\"test_ml.csv\", index_col=0)"
+    "all_data_final = pd.read_csv(\"test_ml.csv\", index_col=0)mean_squared_error"
    ]
   },
   {
@@ -802,9 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
