--- a/kaggle_project.ipynb
+++ b/kaggle_project.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "all_data = pd.read_csv(\"train_ml.csv\", index_col=0)\n",
     "\n",
-    "all_data_final = pd.read_csv(\"test_ml.csv\", index_col=0)mean_squared_error"
+    "all_data_final = pd.read_csv(\"test_ml.csv\", index_col=0)"
    ]
   },
   {
